@@ -40,7 +40,8 @@ __all__ = [ 'CONFIG', 'SB_INFO', 'VERSION', 'PROG_NAME', 'ID_NEW', 'ID_OPEN',
             'ID_USE_SOFTTABS', 'ID_DUP_LINE', 'ID_TRANSLATE',
             'I18N_PAGE', 'ID_GOTO_MBRACE', 'ID_HLCARET_LINE', 'ID_SHOW_SB',
             'ID_REVERT_FILE', 'ID_RELOAD_ENC', 'ID_DOCPROP', 'ID_PASTE_AFTER',
-            'ID_COLUMN_MODE', 'ID_PANELIST', 'ID_NEW_WINDOW', 'ID_TOGGLE_FOLD']
+            'ID_COLUMN_MODE', 'ID_PANELIST', 'ID_MAXIMIZE_EDITOR', 
+            'ID_NEW_WINDOW', 'ID_TOGGLE_FOLD']
 
 #---- Project Info ----#
 # The project info was moved to another module so it could be accessed
@@ -126,6 +127,7 @@ ID_FIND          = wx.ID_FIND
 ID_FIND_PREVIOUS = wx.NewId()
 ID_FIND_NEXT     = wx.NewId()
 ID_FIND_REPLACE  = wx.ID_REPLACE
+
 # Using the system ids automatically disables the menus items
 # when the dialog is open which is not wanted
 if wx.Platform == '__WXMAC__':
@@ -183,6 +185,7 @@ ID_GOTO_MBRACE   = wx.NewId()
 ID_TOGGLE_FOLD   = wx.NewId()
 ID_NEXT_MARK     = wx.ID_FORWARD
 ID_PRE_MARK      = wx.ID_BACKWARD
+ID_MAXIMIZE_EDITOR = wx.NewId()
 
 # Format Menu IDs
 ID_FONT          = wx.NewId()
